# k8s-experiments

./: .copier-answers-baseline.yaml  .copier-answers-python.yaml  .copier-answers-tf-tools.yaml  .copier-answers-tf.yaml  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  .yamllint.yaml  README.md  REUSE.toml  Taskfile.yaml  mkdocs.yaml  pyproject.toml
docs/: index.md  license.md
tasks/tf/: Taskfile.yaml
tasks/tft/: Taskfile.yaml
tf/: .gitignore
tf/contexts/: README.md
tf/contexts/all/: README.md  aws-k8s.tfvars
tf/contexts/dev/: README.md  aws-k8s-0010.tfvars  aws-k8s.tfvars  context.json  mnc.tfvars
tf/contexts/prod/: README.md
tf/contexts/staging/: README.md
tf/contexts/template/: README.md  standard.tfvars
tf/definitions/: README.md
tf/definitions/aaa/: .terraform.lock.hcl  README.md  ssm_params_meta.tf
tf/definitions/aws-k8s/: acm_certificates.tf  aws_data_sources.tf  eks_alb.tf  eks_cluster.tf  eks_storage.tf  providers.tf  variables.tf
tf/definitions/aws-k8s-0010/: .terraform.lock.hcl  aws_data_sources.tf  eks_alb_0010.tf  eks_cluster_0010.tf  eks_storage_0010.tf  locals.tf  main.tf  providers.tf  ssm_params_meta.tf  variables.tf  variables_meta.tf
tf/definitions/mnc/: .terraform.lock.hcl  aws_data_sources.tf  eks_cluster.tf  iam_eks.tf  locals.tf  providers.tf  variables.tf
tf/definitions/template/: locals.tf
tf/definitions/template/tests/: simple_apply.tftest.hcl
tf/modules/: README.md
